--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Launch</title>
+	<title>厦门大学·RoboMaster·倒计时</title>
+	
+	<link rel="icon" href="favicon.ico " type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico " type="image/x-icon">        
+
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
