--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
+	
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>厦门大学·RoboMaster·倒计时</title>
-	
+
 	<link rel="icon" href="favicon.ico " type="image/x-icon">
-	<link rel="shortcut icon" href="favicon.ico " type="image/x-icon">        
+	<link rel="shortcut icon" href="favicon.ico " type="image/x-icon">  
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
