--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>厦门大学·RoboMaster·倒计时</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0">
 
 	<link rel="icon" href="favicon.ico " type="image/x-icon">
 	<link rel="shortcut icon" href="favicon.ico " type="image/x-icon">  
