--- a/index.html
+++ b/index.html
@@ -50,7 +50,16 @@
 	<![endif]-->
 
 	</head>
+	
+	<style>
+		body::-webkit-scrollbar {
+		display: none;
+		 }
+	</style>
+	
 	<body>
+
+		<!--<body style="overflow:-Scroll;overflow-y:hidden" ></body>-->
 		
 	<div class="fh5co-loader"></div>
 	
