--- a/index.html
+++ b/index.html
@@ -68,14 +68,18 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 text-center">
-					<div id="fh5co-logo"><a href="index.html">厦门大学机器人队</a></div>
-
-				</br>
+					<!--<div id="fh5co-logo"><a href="index.html">厦门大学机器人队</a></div>-->
+					<!--<img src="images/RT.png" width="" height="66">-->
+				</br></br>
 					<img src="images/XMU_LOGO.png" width="95" height="95">&nbsp;&nbsp;&nbsp;&nbsp;
 					<img src="images/5squarew.png" width="100" height="100">&nbsp;&nbsp;&nbsp;&nbsp;
 					<img src="images/RCS_LOGO.png" width="90" height="90">
+				</br></br></br>
+					<img src="images/RM2022w.png">
+					<div class="simply-countdown simply-countdown-one"></div>
+					<!--<div class="row">-->
+					</br><h1><font color="white" size="24" face="STXINGKA">自强不息，止于至善</font></h1>
 
-				</div>
 			</div>
 		</div>
 	</nav>
@@ -84,18 +88,16 @@
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2 text-center">
-					<div class="display-t">
-						<div class="display-tc animate-box" data-animate-effect="fadeIn">
+				<!--<div class="col-md-8 col-md-offset-2 text-center">-->
+					<!--<div class="display-t">-->
+						<!--<div class="display-tc animate-box" data-animate-effect="fadeIn">-->
 							
 
-
+						
 							<!--<h1><font face="rmfont">RoboMaster 2022</font></h1>-->
-							<img src="images/RM2022w.png">
+
 							<!--<h2><strong>距离RM2022区域赛还有</strong></h2>-->
-							<div class="simply-countdown simply-countdown-one"></div>
-							<div class="row">
-								<h1><font face="STXINGKA">自强不息，止于至善</font></h1>
+
 
 <!--							<ul class="fh5co-social-icons">
 									<li><a href="https://asr-crash.github.io/XMU-RCS/#about-us"><i class="icon-info-with-circle"></i></a></li>
@@ -103,10 +105,10 @@
 									<li><a href="https://github.com/ASR-Crash/XMU-RCS/"><i class="icon-github-with-circle"></i></a></li>
 									<li><a href="https://asr-crash.github.io/XMU-RCS/#home"><i class="icon-dribbble-with-circle"></i></a></li>
 								</ul>-->	
-							</div>
+							<!--</div>
 						</div>
 					</div>
-				</div>
+				</div>-->
 			</div>
 		</div>
 	</header>
