--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 					<img src="images/RM2022w.png">
 					<div class="simply-countdown simply-countdown-one"></div>
 					<!--<div class="row">-->
-					</br><h1><font color="white" size="24" face="STXINGKA">自强不息，止于至善</font></h1>
+					</br><h1><font color="white" size="24" face="STXINGKA">星星之火，可以燎原</font></h1>
 
 			</div>
 		</div>
