--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 	<head>
 	
 	<meta charset="utf-8">
 	<!--<meta http-equiv="X-UA-Compatible" content="IE=edge">-->
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<title>厦门大学·RoboMaster·倒计时</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0">
+	<meta name="viewport" content="width=device-width, user-scalable=1, initial-scale=1, maximum-scale=1, user-scalable=1">
 
 	<link rel="icon" href="favicon.ico " type="image/x-icon">
 	<link rel="shortcut icon" href="favicon.ico " type="image/x-icon">  
@@ -68,8 +64,6 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 text-center">
-					<!--<div id="fh5co-logo"><a href="index.html">厦门大学机器人队</a></div>-->
-					<!--<img src="images/RT.png" width="" height="66">-->
 				</br></br>
 					<img src="images/XMU_LOGO.png" width="95" height="95">&nbsp;&nbsp;&nbsp;&nbsp;
 					<img src="images/5squarew.png" width="100" height="100">&nbsp;&nbsp;&nbsp;&nbsp;
@@ -79,38 +73,15 @@
 					<div class="simply-countdown simply-countdown-one"></div>
 					<!--<div class="row">-->
 					</br><h1><font color="white" size="24" face="STXINGKA">星星之火，可以燎原</font></h1>
+					<!-- </br><h1><font color="white" size="24" face="STXINGKA"></font></h1> -->
 
 			</div>
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/trophy.jpg);" data-stellar-background-ratio="0.5">
-		<div class="overlay"></div>
-		<div class="container">
-			<div class="row">
-				<!--<div class="col-md-8 col-md-offset-2 text-center">-->
-					<!--<div class="display-t">-->
-						<!--<div class="display-tc animate-box" data-animate-effect="fadeIn">-->
-							
-
-						
-							<!--<h1><font face="rmfont">RoboMaster 2022</font></h1>-->
-
-							<!--<h2><strong>距离RM2022区域赛还有</strong></h2>-->
-
-
-<!--							<ul class="fh5co-social-icons">
-									<li><a href="https://asr-crash.github.io/XMU-RCS/#about-us"><i class="icon-info-with-circle"></i></a></li>
-									<li><a href="https://asr-crash.github.io/XMU-RCS/#contact"><i class="icon-help-with-circle"></i></a></li>
-									<li><a href="https://github.com/ASR-Crash/XMU-RCS/"><i class="icon-github-with-circle"></i></a></li>
-									<li><a href="https://asr-crash.github.io/XMU-RCS/#home"><i class="icon-dribbble-with-circle"></i></a></li>
-								</ul>-->	
-							<!--</div>
-						</div>
-					</div>
-				</div>-->
-			</div>
-		</div>
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/custom_bg.png);" data-stellar-background-ratio="0.5">
+		<!--light control-->
+		<!-- <div class="overlay"></div>  -->
 	</header>
 
 	<footer id="fh5co-footer" role="contentinfo">
@@ -119,14 +90,14 @@
 			<div class="row copyright">
 				<div class="col-md-12 text-center">
 					<p>
-						<small class="block">Copyright &copy; 2021, ASR-Crash authorized to XMU RCS, All rights reserved.</small> 
+						<small class="block">Copyright &copy; 2021, ASR-Crash, All rights reserved.</small> 
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="https://asr-crash.github.io/XMU-RCS/#about-us"><i class="icon-info"></i></a></li>
-							<li><a href="https://asr-crash.github.io/XMU-RCS/#contact"><i class="icon-mail"></i></a></li>
-							<li><a href="https://github.com/ASR-Crash/XMU-RCS/"><i class="icon-github"></i></a></li>
-							<li><a href="https://asr-crash.github.io/XMU-RCS/#home"><i class="icon-dribbble"></i></a></li>
+							<li><a href="https://asr-crash.github.io/XMU-RM-Information-Center/#about-us"><i class="icon-info"></i></a></li>
+							<li><a href="https://asr-crash.github.io/XMU-RM-Information-Center/#contact"><i class="icon-mail"></i></a></li>
+							<li><a href="https://github.com/ASR-Crash/XMU-RM-Information-Center/"><i class="icon-github"></i></a></li>
+							<li><a href="https://asr-crash.github.io/XMU-RM-Information-Center/#home"><i class="icon-dribbble"></i></a></li>
 						</ul>
 					</p>
 				</div>
@@ -161,21 +132,7 @@
 //    var d = new Date(new Date().getTime() + 800 * 120 * 120 * 2000);
 
     // default example
-    simplyCountdown('.simply-countdown-one', {
-		/*
-        year: d.getFullYear(),
-        month: d.getMonth() + 1,
-        day: d.getDate()
-		*/
-    });
-
-    // //jQuery example
-    // $('#simply-countdown-losange').simplyCountdown({
-    //     year: d.getFullYear(),
-    //     month: d.getMonth() + 1,
-    //     day: d.getDate(),
-    //     enableUtc: false
-    // });
+    simplyCountdown('.simply-countdown-one', {});
 </script>
 
 	</body>
