--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/custom_bg.png);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/trophy.jpg);" data-stellar-background-ratio="0.5">
 		<!--light control-->
-		<!-- <div class="overlay"></div>  -->
+		<div class="overlay"></div> 
 	</header>
 
 	<footer id="fh5co-footer" role="contentinfo">
